--- a/style.css
+++ b/style.css
@@ -24,6 +24,7 @@ header {
     align-items: center;
     padding-top: 20px;
     padding-bottom: 20px;
+    border-bottom: 1px solid lightgray;
 }
 
 /* Parent for main heroboxes */
@@ -55,6 +56,7 @@ main {
     background-position: bottom;
     min-height: 250px;
     width: 30%;
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.226);
 }
 
 .card2 {
@@ -63,6 +65,7 @@ main {
     background-position: bottom;
     min-height: 250px;    
     width: 30%;
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.226);
 }
 
 .card3 {
@@ -71,12 +74,19 @@ main {
     background-position: bottom;
     min-height: 250px;
     width: 30%;
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.226);
+}
+
+.card1, .card2, .card3 {
+    padding: 30px 30px 20px 30px;
+    box-sizing: border-box;
 }
 
 h1 {
     font-family: 'Playfair Display', serif;
     font-size: 3.25rem;
     margin-bottom: 1rem;
+    text-shadow: 0px 2px 2px rgba(0, 0, 0, 0.397);
 }
 
 h2 {
@@ -90,8 +100,40 @@ p {
     margin-bottom: 0.5rem;
 }
 
+a {
+    color: white;
+    text-decoration: none;
+}
+
 .cards p {
     font-size: 0.85rem;
     line-height: 1.2rem;
-    margin: 10px 30px 20px 30px;
+    margin-top: 10px;
+}
+
+.cards i {
+    font-size: 100px;
+    /* padding-top: 30px; */
+}
+
+.mybutton {
+    background-color: white;
+    color:#FC5E55;
+    text-decoration: none;
+    font-family: 'Playfair Display', serif;
+    padding: 11px 25px;
+    border-radius: 2px;
+    box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.226);
+}
+
+a.mybutton {
+    display: inline-block;
+    margin-top: 20px;
+}
+
+.navbutton {
+    border: 1px solid white;
+    border-radius: 2px;
+    padding: 11px 25px;
+    font-family: 'Playfair Display', serif;
 }
