--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
-html {
+/* html {
     height: 100%;
-}
+} */
 
 body {
     background-image: linear-gradient(#FC5E55, #FA4083);
@@ -136,4 +136,19 @@ a.mybutton {
     border-radius: 2px;
     padding: 11px 25px;
     font-family: 'Playfair Display', serif;
+}
+
+.testimonials {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    margin-bottom: 100px;
+}
+
+.tbox {
+    width: 47%;
+    padding: 50px;
+    border: 1px solid white;
+    box-sizing: border-box;
+    margin-top: 50px;
 }
