--- a/style.css
+++ b/style.css
@@ -125,15 +125,16 @@ a {
     /* padding-top: 30px; */
 }
 
-/* Using box-shadow for depth */
 .mybutton {
     background-color: white;
     color:#FC5E55;
     text-decoration: none;
     font-family: 'Playfair Display', serif;
     padding: 11px 25px;
-    border-radius: 2px;
+    border-radius: 8px 4px;
+    /* Using box-shadow for depth */
     box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.226);
+    font-size: 1.2rem;
 }
 
 
@@ -209,4 +210,47 @@ a.mybutton {
 
 .dropdown .navbutton a {
     color: #FC5E55;
+}
+
+.inputwrapper {
+    margin-bottom: 20px;
+}
+
+input[type=text], input[type=email], textarea {
+    padding: 12px 20px;
+    width: 100%;
+    font-family: 'Roboto', sans-serif;
+    font-size: 1rem;
+    box-sizing: border-box;
+}
+
+.newline {
+    display: block;
+    margin-bottom: 10px;
+}
+
+.margin-right-a {
+    margin-right: 50px;
+}
+
+input[type=checkbox] {
+    font-size: 2rem;
+}
+
+input[type=radio] {
+    margin-right: 10px;
+    font-size: 2rem;
+}
+
+select {
+    font-size: 1rem;
+    border: 1px solid lightgray;
+}
+
+form {
+    margin: 40px 0px;
+}
+
+input[type=submit] {
+    border-radius: 8px 4px;
 }
